assets/stylesheets/components/sections.css.scss
.container {
  max-width: 1024px;
}

.toc-view, .section-view, .part-view {
  button[data-action="bookmark"],
  button[data-action="share"],
  button[data-action="flag"] {
    display: none;
  }
}

.toc-view, .part-view {
  button[data-action="reply"],
  button[data-action="admin"] {
    display: none;
  }
}

.section-view {
  padding-left: 3em;

  h1, h2 {
    font-weight: 300;
  }

  p {
    line-height: 2;
  }

  section.post-menu-area,
  .container .contents {
    position: static;
  }

  &.topic-body {
    width: 100%;
    padding: 0;
    border: 0;
  }

  .cooked {
    max-width: 100%;
    box-sizing: border-box;
  }
}

.reply-as-new-topic {
  @extend .quote-button;
}

.collapsed-quote-button {
  width: 0;
  padding: 0;
}

.topic-post-content {
  .section-view.topic-body {
    border-bottom: 1px dashed #e9e9e9;
  }
}

#topic-title {
  h1.section-title {
    font-weight: 300;
    font-size: 2.5em;
  }
}

.section-details-view {
  margin-bottom: 50px;
  max-width: 100%;

  #topic-closing-info {
    display: none;
  }
}

.post-box {
  margin: 0 0 50px;

  h3 {
    font-weight: 400;
    font-size: 20px;
  }

  p {
    margin: 10px 0;
  }
}

.plain-list {
  list-style-type: none;
  margin: 10px 0;
  padding: 0;

  li {
    line-height: 2em;
  }
}

.chapter-input, .section-input {
  display: inline;

  select {
    margin: 6px 10px 3px 0;
    width: 350px;
    height: 34px;
  }
}

#reply-chapter {
  @extend #reply-title;
}

.position-input {
  @extend .title-input;

  input {
    width: 20px;
    padding: 7px 10px;
    margin: 6px 10px 3px 0;
  }
}

